Contenido en estructura

--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HMMING</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <header>
       <nav>
-        <div>logo</div>
+        <div><img src="img/logo.png" alt="" /></div>
         <div>
           <ul>
             <li>Inicio</li>
@@ -19,58 +26,53 @@
         </div>
       </nav>
       <div>
-        <h1>TITULO</h1>
+        <h1>Calidad a precios justos - solo lo mejor para tu hogar</h1>
       </div>
     </header>
     <section>
       <div>
-        <h2>tit</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, sed.
-        </p>
+        <h2>Razones para escogernos</h2>
+        <p>Nuestras cualificaciones a simple vista</p>
         <hr />
       </div>
       <div>
         <div>
-          <img src="" alt="no-img" />
-          <p>txt</p>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <p>Amplia gama de diseños</p>
         </div>
         <div>
-          <img src="" alt="no-img" />
-          <p>txt</p>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <p>Presupuestos viables</p>
         </div>
         <div>
-          <img src="" alt="no-img" />
-          <p>txt</p>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <p>Citas flexibles</p>
         </div>
         <div>
-          <img src="" alt="no-img" />
-          <p>txt</p>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <p>Sistemas eléctricos</p>
         </div>
       </div>
     </section>
     <section>
       <div>
-        <h2>tit</h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
-          maxime?
-        </p>
+        <h2>Portofolio</h2>
+        <p>Encargos realizados</p>
         <hr />
       </div>
       <div>
-        <img src="" alt="no.img" />
-        <img src="" alt="no.img" />
-        <img src="" alt="no.img" />
-        <img src="" alt="no.img" />
+        <img src="img/150421_Servidor_600-1.jpg" alt="no.img" />
+        <img src="img/AdobeStock_302670250.jpg" alt="no.img" />
+        <img src="img/redes-datos-costa-rica-Adnet.jpg" alt="no.img" />
+        <img src="img/redes-de-datos1.jpg" alt="no.img" />
       </div>
     </section>
     <section>
       <div>
-        <h2>tit</h2>
+        <h2>Nuestro equipo de expertos</h2>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus,
-          incidunt!
+          Nuestro equipo de expertos se hace cargo de todos los trabajos, de
+          manera rápida y confiable.
         </p>
         <hr />
       </div>
@@ -87,41 +89,35 @@
     </section>
     <section>
       <div>
-        <h2>tit</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus,
-          suscipit?
-        </p>
+        <h2>Horarios de oficina</h2>
+        <p>Abierto toda la semana</p>
         <hr />
       </div>
       <div>
         <div>
-          <p></p>
-          <p></p>
+          <p>Mon-Fri</p>
+          <p>Sat-Sun</p>
         </div>
         <div>
-          <p></p>
-          <p></p>
+          <p>9:00 am - 5:00 pm</p>
+          <p>Closed</p>
         </div>
         <div>
-          <img src="" alt="no-img" />
-          <p></p>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <p>928 928 928</p>
         </div>
       </div>
     </section>
     <section>
       <div>
-        <h2>tit</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
-          et!
-        </p>
+        <h2>Visitanos el día de hoy y pregunta por nuestras ofertas</h2>
+        <p>Contáctanos para más información</p>
         <hr />
       </div>
       <div>
-        <div><img src="" alt="no-img" /></div>
+        <div><img src="img/carte.png" alt="no-img" /></div>
         <div>
-          <h2>tit</h2>
+          <h2>Envíanos un mensaje</h2>
           <form action="#" method="POST">
             <div>
               <div>
@@ -155,26 +151,32 @@
     </section>
     <footer>
       <div>
-        <p></p>
-        <p></p>
+        <p>Suscribete a nuestra Newsitter</p>
+        <p>Subscribirse</p>
       </div>
       <div>
         <div>
-          <p></p>
-          <img src="" alt="no-img" />
-          <p></p>
+          <p>Acerca de nosotros</p>
+          <img src="img/logo.png" alt="no-img" />
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor,
+            veniam?
+          </p>
         </div>
         <div>
-          <p></p>
-          <p></p>
-          <p></p>
-          <p></p>
+          <p>Dirección</p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt,
+            deserunt?
+          </p>
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
         </div>
         <div>
-          <p></p>
-          <img src="" alt="no-img" />
-          <img src="" alt="no-img" />
-          <img src="" alt="no-img" />
+          <p>Síguenos</p>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
     </footer>
