Diseño de 3 secciones

--- a/index.html
+++ b/index.html
@@ -15,13 +15,23 @@
   <body>
     <header>
       <nav>
-        <div><img src="img/logo.png" alt="" /></div>
+        <div>
+          <a href="#"><img src="img/logo.png" alt="" /></a>
+        </div>
         <div>
           <ul>
-            <li>Inicio</li>
-            <li>Galeria</li>
-            <li>Contacto</li>
-            <li>Aviso Legal</li>
+            <li>
+              <a href="#"><p>Inicio</p></a>
+            </li>
+            <li>
+              <a href="#"><p>Galeria</p></a>
+            </li>
+            <li>
+              <a href="#"><p>Contacto</p></a>
+            </li>
+            <li>
+              <a href="#"><p>Aviso legal</p></a>
+            </li>
           </ul>
         </div>
       </nav>
@@ -29,7 +39,7 @@
         <h1>Calidad a precios justos - solo lo mejor para tu hogar</h1>
       </div>
     </header>
-    <section>
+    <section class="primera_seccion">
       <div>
         <h2>Razones para escogernos</h2>
         <p>Nuestras cualificaciones a simple vista</p>
@@ -37,24 +47,24 @@
       </div>
       <div>
         <div>
-          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fas fa-quidditch"></i></a>
           <p>Amplia gama de diseños</p>
         </div>
         <div>
-          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fas fa-cocktail"></i></a>
           <p>Presupuestos viables</p>
         </div>
         <div>
-          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fas fa-mug-hot"></i></a>
           <p>Citas flexibles</p>
         </div>
         <div>
-          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fas fa-wine-bottle"></i></a>
           <p>Sistemas eléctricos</p>
         </div>
       </div>
     </section>
-    <section>
+    <section class="segunda_seccion">
       <div>
         <h2>Portofolio</h2>
         <p>Encargos realizados</p>
@@ -67,7 +77,7 @@
         <img src="img/redes-de-datos1.jpg" alt="no.img" />
       </div>
     </section>
-    <section>
+    <section class="tercera_seccion">
       <div>
         <h2>Nuestro equipo de expertos</h2>
         <p>
