--- a/index.html
+++ b/index.html
@@ -88,16 +88,23 @@
       </div>
       <div>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias nam
-          perspiciatis assumenda amet ex, doloribus cupiditate illo, libero
-          quidem reprehenderit officia omnis architecto voluptatibus. Quae
-          officia, beatae fugiat tenetur, iure numquam in quas non facere
-          quibusdam dolorem porro? Eligendi vitae veniam iure pariatur aliquid
-          officiis beatae, necessitatibus rem sunt nostrum.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure nam
+          saepe vero molestiae omnis accusantium neque! Excepturi atque optio
+          recusandae temporibus neque molestiae sapiente alias iusto rem quos
+          culpa dolorum ut deleniti maiores fugiat vero laborum earum
+          perspiciatis quis, a nulla. Architecto ullam cupiditate, ex soluta
+          minima iure accusamus in modi vel quia, recusandae maiores quas atque
+          earum fugit placeat quis odio! Quidem, vero quae? Id ducimus deserunt
+          delectus consectetur exercitationem distinctio similique ratione ullam
+          ad vel soluta, blanditiis facilis illo velit nesciunt eius doloremque
+          neque molestiae eveniet quo mollitia voluptate omnis nemo. Harum,
+          nulla rem necessitatibus dolore consequuntur minima. Lorem ipsum dolor
+          sit amet consectetur adipisicing elit. Culpa sequi sed officiis nisi
+          doloribus voluptatem ad amet obcaecati aliquam quos?
         </p>
       </div>
     </section>
-    <section>
+    <section class="cuarta_seccion">
       <div>
         <h2>Horarios de oficina</h2>
         <p>Abierto toda la semana</p>
@@ -113,10 +120,11 @@
           <p>Closed</p>
         </div>
         <div>
-          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-whatsapp"></i></a>
           <p>928 928 928</p>
         </div>
       </div>
+      <hr />
     </section>
     <section>
       <div>
