Seccion quinta terminada

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </div>
       <hr />
     </section>
-    <section>
+    <section class="quinta_seccion">
       <div>
         <h2>Visitanos el día de hoy y pregunta por nuestras ofertas</h2>
         <p>Contáctanos para más información</p>
