--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <footer>
       <div>
         <p>Suscribete a nuestra Newsitter</p>
-        <p>Subscribirse</p>
+        <a href="#">Subscribirse</a>
       </div>
       <div>
         <div>
@@ -192,9 +192,9 @@
         </div>
         <div>
           <p>Síguenos</p>
+          <a href="#"><i class="fab fa-facebook"></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-twitter-square"></i></a>
         </div>
       </div>
     </footer>
