--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HMMING</title>
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/dimensiones.js"></script>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -12,7 +13,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body onload="inicializar()">
     <header>
       <nav>
         <div>
